@@ -7,15 +7,21 @@ import persistent.list
 import zope.app.appsetup.bootstrap
 import zope.preference.default
 import zope.preference.interfaces
+import icemac.addressbook.utils
 
 
 def add(address_book):
     """Add a default preferences provider to the address book."""
     # Add a default preferences utility on the address book site.
-    default_prefs = zope.app.appsetup.bootstrap.ensureUtility(
-        address_book,
-        zope.preference.interfaces.IDefaultPreferenceProvider, '',
-        zope.preference.default.DefaultPreferenceProvider)
+    if icemac.addressbook.utils.utility_locally_registered(
+            address_book, zope.preference.interfaces.IDefaultPreferenceProvider):
+        default_prefs = zope.component.getUtility(
+            zope.preference.interfaces.IDefaultPreferenceProvider)
+    else:
+        default_prefs = zope.app.appsetup.bootstrap.ensureUtility(
+            address_book,
+            zope.preference.interfaces.IDefaultPreferenceProvider, '',
+            zope.preference.default.DefaultPreferenceProvider)
 
     # Set the defaults for the person list.
     personList = default_prefs.getDefaultPreferenceGroup('personList')
@@ -35,4 +41,4 @@ def add(address_book):
         person_entity, 'last_name')
     # The default sort direction is ascending
     personList.sort_direction = 'ascending'
-
+    personList.batch_size = 20
